[package]
name = "rsan"
description = "File Format for easy, fast and lightweight Array notation"
version = "1.1.0"
edition = "2021"
authors = ["Wagamundi <mail@wagamundi.de>"]
repository = "https://github.com/Wagamundi/RSAN"
readme = "README.md"
keywords = ["array", "notation", "File"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
exclude = ["test.rsan", "Projekt_RSAN.code-workspace", ".gitignore"]